Added responsive image gallery

--- a/Contact.html
+++ b/Contact.html
@@ -33,7 +33,7 @@
                 <ul class="navigation flex flex-col" id="myList">
                     <li><a href="Home.php">Home</a></li>
                     <li><a href="Products.php">Shop</a></li>
-                    <li><a href="Gallery.php">Gallery</a></li>
+                    <li><a href="Gallery.html">Gallery</a></li>
                     <li><a href="Contact.html">Contact Us</a></li>
                 </ul>
                 <div class="icons flex flex-even">
@@ -46,7 +46,7 @@
                 <ul>
                     <li><a href="Home.php">HOME</a></li>
                     <li><a href="Products.php">SHOP</a></li>
-                    <li><a href="Gallery.php">GALLERY</a></li>
+                    <li><a href="Gallery.html">GALLERY</a></li>
                     <li><a href="Contact.html">CONTACT US</a></li>
                 </ul>
                 <div class="icons icons-desk flex flex-even">
