--- a/Gallery.html
+++ b/Gallery.html
@@ -45,6 +45,7 @@
                 </div>
             </div>
             <div class="desk-nav">
+                <img src="images/icons/logo.jpg" class="logo">
                 <ul>
                     <li><a href="Home.php">HOME</a></li>
                     <li><a href="Products.php">SHOP</a></li>
@@ -58,7 +59,9 @@
             </div>
         </header>
         <div class="flex flex-center title">
-            <h1>Herringbone</h1>
+            <a href="Home.php">
+                <h1>Herringbone</h1>
+            </a>
         </div>
     </div>
 
@@ -66,32 +69,37 @@
         <div class="container gallery">
             <div class="row">
                 <div class="col-12 col-sm-6 col-md-6 col-lg-4 mb-4 img-container">
-                    <img src="images/gallery/cafe1.jpg" alt="Image 2" class="img-fluid">
+                    <img src="images/gallery/coffee.png" alt="Image 2" class="img-fluid"
+                    onclick="openImageModal(this)">
                 </div>
                 <div class="col-12 col-sm-6 col-md-12 col-lg-8 mb-4 img-container">
-                    <img src="images/gallery/shop1.jpg" alt="Image 3" class="img-fluid">
+                    <img src="images/gallery/interior.jpg" alt="Image 3" class="img-fluid"
+                    onclick="openImageModal(this)">
                 </div>
-                <!-- Add more images as needed -->
+
             </div>
-            
+
             <div class="row">
                 <div class="col-12 col-sm-6 col-md-6 col-lg-4 mb-4 img-container">
-                    <img src="images/gallery/cafe2.jpg" alt="Image 5" class="img-fluid">
+                    <img src="images/gallery/exterior2.jpg" alt="Image 5" class="img-fluid"
+                    onclick="openImageModal(this)">
                 </div>
                 <div class="col-12 col-sm-6 col-md-6 col-lg-4 mb-4 img-container">
-                    <img src="images/gallery/cafe3.jpg" alt="Image 6" class="img-fluid">
+                    <img src="images/gallery/window.jpg" alt="Image 6" class="img-fluid"
+                    onclick="openImageModal(this)">
                 </div>
                 <div class="col-12 col-sm-6 col-md-6 col-lg-4 mb-4 img-container">
-                    <img src="images/gallery/shop5.jpg" alt="Image 6" class="img-fluid">
+                    <img src="images/gallery/exterior.jpg" alt="Image 6" class="img-fluid"
+                    onclick="openImageModal(this)">
                 </div>
-                <div class="col-12 col-sm-6 col-md-12 col-lg-8 mb-4 img-container">
-                    <img src="images/gallery/shop3.jpg" alt="Image 7" class="img-fluid">
-                </div>
-                <div class="col-12 col-sm-6 col-md-6 col-lg-4 mb-4 img-container">
-                    <img src="images/gallery/shop4.jpg" alt="Image 8" class="img-fluid">
-                </div>
-                <!-- Add more images as needed -->
+
+
             </div>
+        </div>
+        <!-- modal to show full size images -->
+        <div id="imageModal" class="modal">
+            <span class="close" onclick="closeImageModal()">&times;</span>
+            <img class="modal-content" id="modalImage">
         </div>
 
 
@@ -166,6 +174,22 @@
     </script>
     <script src="navigation.js"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/5.1.3/js/bootstrap.bundle.min.js"></script>
+    <script>
+    // Function to open the modal and display the clicked image
+function openImageModal(image) {
+    const modal = document.getElementById("imageModal");
+    const modalImage = document.getElementById("modalImage");
+
+    modal.style.display = "flex"; // Show the modal
+    modalImage.src = image.src; // Set the modal image source to the clicked image's source
+}
+
+// Function to close the modal
+function closeImageModal() {
+    const modal = document.getElementById("imageModal");
+    modal.style.display = "none"; // Hide the modal
+}
+</script>
 </body>
 
 </html>
