updated home page display, added new elements. adjusted for mobile view.

--- a/Cafe.html
+++ b/Cafe.html
@@ -5,8 +5,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Herringbone</title>
+    <link rel="icon" type="image/x-icon" href="images/icons/favicon.png">
     <meta name="description"
-        content="Herringbone is an independantly owned gift shop and cafe located in Peebleshire, stocking handmade and locally sourced unique gifts...">
+        content="The No.56 cafe serves delicious savoury lunches and sweet treat, along with barista made coffee from Forth Coffee Roasters.">
     <meta name="author" content="Amber Degner-Budd">
     <meta name="keywords"
         content="Gift shop, Cafe, Scottish gifts, Handmade, Locally sourced, Scottish makers, Local makers">
@@ -66,19 +67,7 @@
         </div>
     </div>
 
-    <main class="cafe-main">
-
-        <div class="cafe-title">
-            <div class="menu-heading">
-                <h1>NO. 56 CAFE</h1>
-                <H2>-MENU-</H2>
-            </div>
-        </div>
-
-       
-
-    </main>
-
+    
 
 
 
