updated products page, added new products.

--- a/Gallery.html
+++ b/Gallery.html
@@ -99,6 +99,10 @@
                     <img src="images/gallery/interior2.jpg" alt="No.56 cafe" class="img-fluid"
                         onclick="openImageModal(this)">
                 </div>
+                <div class="col-12 col-sm-6 col-md-2 col-lg-8 mb-4 img-container">
+                    <img src="images/gallery/cow.jpg" alt="Interior shop featuring Highland Cow decor" class="img-fluid"
+                        onclick="openImageModal(this)">
+                </div>
             </div>
         </div>
         </div>
