Updated Cafe page

--- a/Cafe.html
+++ b/Cafe.html
@@ -39,6 +39,7 @@
                     <li><a href="Home.php">Home</a></li>
                     <li><a href="Products.php">Shop</a></li>
                     <li><a href="Gallery.html">Gallery</a></li>
+                    <li><a href="cafe.html">Cafe</a></li>
                     <li><a href="Contact.php">Contact Us</a></li>
                 </ul>
                 <div class="icons icons-desk flex flex-even">
@@ -47,11 +48,11 @@
                 </div>
             </div>
             <div class="desk-nav">
-                <img src="images/icons/logo.jpg" class="logo">
                 <ul>
                     <li><a href="Home.php">HOME</a></li>
                     <li><a href="Products.php">SHOP</a></li>
                     <li><a href="Gallery.html">GALLERY</a></li>
+                    <li><a href="cafe.html">CAFE</a></li>
                     <li><a href="Contact.php">CONTACT US</a></li>
                 </ul>
                 <div class="icons icons-desk flex flex-even">
@@ -66,6 +67,27 @@
             </a>
         </div>
     </div>
+
+
+    <main class="cafe-page">
+
+        <div class="cafe-imgs flex-center">
+            <img src="images/gallery/coffee2.png">
+            <img src="images/gallery/interior2.jpg">
+            <img src="images/gallery/lemonpie2.jpg">
+        </div>
+
+        <div class="flex flex-col menu-title">
+            <h1>The No.56 Cafe</h1>
+            <p class="align">
+                Welcome to The No.56 Cafe. We serve delicious lunches, sweet treats and a variety of teas and coffees.<br>Our signature coffee is brewed by our talented Baristas using beans from Forth Roasters in Fife.
+                <br> We are a dog friendly cafe and welcome you to bring your dogs along for a treat!
+                
+            </p>
+            <span class="menu-border">.</span>
+            <h2>Our Menu</h2>
+        </div>
+    </main>
 
     
 
